# nutrition

./: .gitignore  README.md  main.py  pyproject.toml
data/: nutrient_database.csv
data/daily_data/: Nutrients_04.01.2024.csv  Nutrients_09.07.2025.csv  Nutrients_13.11.2023.csv  Nutrients_16.11.2023.csv  Nutrients_17.11.2023.csv  Nutrients_26.10.2023.csv  Nutrients_27.10.2023.csv  Nutrients_29.10.2023.csv  Nutrients_30.11.2023.csv  Settings_04.01.2024.csv  Settings_09.07.2025.csv  Settings_13.11.2023.csv  Settings_16.11.2023.csv  Settings_17.11.2023.csv  Settings_29.10.2023.csv  Settings_30.11.2023.csv
scripts/: migrate_data.py
src/: dependencies.py  models.py
src/api/: daily_intake.py  database.py  settings.py
src/data/: data_manager.py  database.py
src/logic/: api_client.py  nutrition_calculator.py
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
tests/: test_data_manager.py  test_nutrition_calculator.py
