[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrition"
version = "0.1.0"
description = "Nutrition tracking application"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pandas",
    "requests",
    "numpy<2.0",
    "sqlalchemy",
    "chardet",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
